--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -1,24 +1,28 @@
 *{
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
-    justify-content: center;
-    align-items: center;
+    font-family:'Courier New', Courier, monospace;
+    
+  
 }
 
 .hero-section{
     background-color: #1f2937;
-    width: 100%;
-    height: 50vh;
+    width: 100vw;
+    height: 70vh;
     font-family:'Courier New', Courier, monospace;
+    
+   
    
 
 }
 .header{
    
  display: flex;
- padding: 40px;
- justify-content: space-evenly;
+ padding: 20px 10%; 
+ justify-content: space-between;
+ align-items: center;
+ 
 
 }
 .header-logo-text{
@@ -40,4 +44,44 @@
 }
 .header-link-text a:hover{
     text-decoration: underline;
+}
+
+.hero-main{
+display: flex;
+align-items: center;
+height: 50vh;
+padding: 0 10%;
+
+    
+   
+}
+
+.hero-middle{
+    max-width: 600px;
+}
+.hero-main-text{
+    font-size: 48px;
+    font-weight:bolder;
+    color: #f9faf8;
+}
+.hero-secondary-text{
+    font-size: 14px;
+    color: #e5e7eb;
+}
+.btn {
+    background: #3882f6;
+    width: 120px;
+    height: 35px;
+    display:inline;
+    margin: 12px;
+    border: 2px  solid #3882f6;
+    border-radius: 10px;
+    right: 40px;
+    
+}
+.btn a{
+    color: #e5e7eb;
+    text-decoration: none;
+    font-weight: bold;
+
 }
