--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -5,6 +5,10 @@
     
   
 }
+body{
+   padding: 0;
+    margin: 0;
+}
 
 .hero-section{
     background-color: #1f2937;
@@ -16,7 +20,7 @@
    
 
 }
-.header{
+.header-section{
    
  display: flex;
  padding: 20px 10%; 
@@ -84,4 +88,119 @@ padding: 0 10%;
     text-decoration: none;
     font-weight: bold;
 
+}
+
+.main-text{
+    font-size:36px;
+    font-weight: bolder;
+    text-align: center;
+    padding: 4%
+}
+.middle-container{
+max-width: 1200px;
+width: 100%;
+
+
+
+}
+.main-container{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+     width: 100%;
+    max-width: 1200px;
+    margin: 20px;
+    
+}
+.main-item{
+   flex:1;
+   padding: 20px;
+   margin: 10px;
+   text-align: center;
+   padding:20px;
+   
+}
+
+.quote-section{
+    background-color: #e5e7eb;
+    width: 100%;
+    height: 300px;
+}
+
+.quote-text{
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+    text-align: center;
+    padding: 10px 0px;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    color: #1f2937;
+    text-wrap: wrap;
+    width: 100%;
+    line-height:40px;
+}
+blockquote{
+    font-size: 26px;
+    text-align: right;
+    padding: 0 10% 5% 10%;
+    color: #1f2937;
+    font-style: italic;
+    font-weight: bold;
+    text-wrap:wrap;
+}
+
+.cta-section{
+    display: flex;
+    background-color: #3882f6;
+    /* display: flex; */
+    justify-content:center;
+    width: 90%;
+    padding: 5%;
+    box-sizing: border-box;
+    border-radius: 8px;
+    text-align:start;
+    
+    
+
+
+}
+.me{
+ display: flex; 
+ width: 100%;
+ margin: 5% ;
+ text-align: left;
+
+}
+.cta-text{
+    color: #fff;
+    font-weight: bold;
+    font-style: normal;
+}
+.cta-signup{
+    padding-left: 15%;
+}
+.cta-signup-button{
+    background-color: transparent;
+   padding: 10px 20px;
+   border-radius: 5px;
+   border: 1px solid white;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
+  
+}
+.cta-signup-button a{
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px 20px;
+    
+}
+.footer{
+    background-color: #1f2937;
+    text-align: center;
+    width: 100%;
+    height: 300%;
+    padding: 20px;
+    color: #F9FAf8;
 }
