--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -156,7 +156,7 @@ blockquote{
     background-color: #3882f6;
     /* display: flex; */
     justify-content:center;
-    width: 90%;
+    width: 100%;
     padding: 5%;
     box-sizing: border-box;
     border-radius: 8px;
@@ -167,11 +167,10 @@ blockquote{
 
 }
 .me{
- display: flex; 
- width: 100%;
- margin: 5% ;
- text-align: left;
 
+ width: 100vw;
+ padding:40px;
+ margin: 0;
 }
 .cta-text{
     color: #fff;
@@ -199,8 +198,7 @@ blockquote{
 .footer{
     background-color: #1f2937;
     text-align: center;
-    width: 100%;
-    height: 300%;
+    height: 100%;
     padding: 20px;
     color: #F9FAf8;
 }
